Delete repeated title, add TOC, fix styling

--- a/_posts/2020-02-05-DS-3.md
+++ b/_posts/2020-02-05-DS-3.md
@@ -6,8 +6,17 @@ categories:
 date: 2020-02-05
 ---
 
+- [Architectural Style](#architectural-style)
+  - [1. Layered Architecture](#1-layered-architecture)
+  - [2. Object based style](#2-object-based-style)
+  - [3. Resource based Architectures](#3-resource-based-architectures)
+  - [4. Event based architecture](#4-event-based-architecture)
+- [System Architectures](#system-architectures)
+  - [1. Centralised Organisations](#1-centralised-organisations)
+  - [2. Decentralised](#2-decentralised)
+  - [3. Hybrid](#3-hybrid)
+- [Summary](#summary)
 
-## **3. Distributed Systems Architectures**
 
 
 **Goal**  
@@ -29,8 +38,8 @@ distributed system.
     on a real machines)→ it becomes a system architecture
   - WHAT ARE THE difference between them?
 
-**Architectural Style**
 
+## Architectural Style
   - Formulated in terms of:
       - Components with well-defined interfaces
       - the way they are connected to each other – mechanism that
@@ -51,30 +60,26 @@ distributed system.
   - Important is that components are connected, and provide
     **interfaces** so that other components can use it
 
- importance of interface\!\!\!\!\!\!\!\!
 
-**<span class="underline">1. Layered Architecture</span>**
+### 1. Layered Architecture
 
   - ![Screenshot 2020-02-13 at 9 30 46 am](https://user-images.githubusercontent.com/33334078/74420534-84711400-4e43-11ea-8df6-498fe5f82727.png)
 
-
-<span class="underline">  
-</span>
-  - <span class="underline">A – pure layered organization</span>
+  -  A – pure layered organization
       - Only downcalls to the next lower layer are made.
       - In TCP IP, there are 5 layers. (application, transport,
         network, link, physical) and you can only talk to the next one,
         not n-2.
       - Layer n-1 will provide an interface to n, and if you wanna talk
         to me, u’d have to do it through this interface
-  - <span class="underline">B – mixed layered organisation.</span>
+  -  B – mixed layered organisation.
       - E.g. take layer n-1. There’s an app called A. this will invoke
-        an <span class="underline">OS library</span> that’s available in
+        an  OS library  that’s available in
         layer n-3. AS WELL as n-3, A will call layer n-2,wihich holds a
-        <span class="underline">maths library</span>. maths library
+         maths library . maths library
         itself relies on OS library in layer n-3\! So n-2 has to call
         n-3 as well.
-  - <span class="underline">C – layered organisation with upcalls</span>
+  -  C – layered organisation with upcalls
       - Have a lower layer do an upcall to its next higher layer
       - E.g. OS signals the occurrence of an event
           - Its to do with **handle** – Its possible to subscribe to
@@ -98,9 +103,8 @@ distributed system.
   - Important to understand the difference between a service offered by
     a layer
 
-**application Layering: the PAD model**
-
-  - Taking a layered arch and apeopleying in a modern software. It ends
+**Application Layering: the PAD model**
+  - Taking a layered arch and applying in a modern software. It ends
     up as a PAD model
       - Presentation layer – **you** sitting in front of computer, and
         about to use a **browser**.
@@ -111,19 +115,16 @@ distributed system.
         operates
 
 **E.g. a Web Search Engine**
-
   - ![Screenshot 2020-02-13 at 9 32 38 am](https://user-images.githubusercontent.com/33334078/74420695-c732ec00-4e43-11ea-84dc-049d431684f3.png)
-
   - RHS you have three levels: UI, processing, data
-
   - (UI) User types in a search keyword → (Processing) Query generator
     needs db → (Data) db query is taken care of → (Data) the info (page
     titles and info) is sent back to processing level → (processing) All
     results are ranked → (processing) generates HTML pages→ (UI) its
     passed back to UI level.
 
-**A search on Google cloud: How it is handled**
 
+**A search on Google cloud: How it is handled**
   - **Query** is sent through google – in the **border router** of the
     google cloud, and it needs to balance the influx of query load.
     **Load balancer** tells you to go this way\!\! It will get taken by
@@ -132,61 +133,46 @@ distributed system.
   - Hierarchy of the switches is very complex
   - Refer to processing and data level from prev\!
 
-**<span class="underline">2. Object based style</span>**
 
+### 2. Object based style
   - Objects corresponds to components, connected and communicate through
     a **procedure call** mechanism. If two objects reside on the same
     system **→ method call,** over a network **→ remote procedure
     call.**
-
   - Object encapsulate the data **(state),** as they exhibit the
     interface, but neverrrr shows how its implemented.
 
-**Architecture**
 
+**Architecture**
 ![Screenshot 2020-02-13 at 9 33 29 am](https://user-images.githubusercontent.com/33334078/74420779-e5005100-4e43-11ea-8da3-c249c132ff38.png)
 
 Client-side stub (**proxy**)
 1.  Client invokes a method
 2.  Server gives a copy of **interface** to client → called **proxy**.
     Proxy is loaded into clients address space.
-
-<!-- end list -->
-
-  - Proxy <span class="underline">marshal</span> the method invocation
-    client made
-  - and <span class="underline">unmarshal</span> reply messages to
-    return the result of the method invocation to the client.
-
-<!-- end list -->
-
+    - Proxy  marshal  the method invocation client made
+    - and  unmarshal  reply messages to return the result of the method invocation to the client.
 3.  The marshalled invocation is passed across **network**.
 
 Server-side stub (**skeleton**)
-
 4.  Incoming invocation requests are first sent to a **server stub
     (skeleton)**
+    - Which unmarshals the invocation client sent, and actually make
+      method invocation that client wants at the server through an
+      interface.
+    - Also creates a reply and marshals them and forwards reply msgs to
+      the client-side **proxy**
+- **Proxy and the skeleton** are referred to as **stubs**\!\!\! BOARD
 
-<!-- end list -->
 
-  - Which unmarshals the invocation client sent, and actually make
-    method invocation that client wants at the server through an
-    interface.
-  - Also creates a reply and marshals them and forwards reply msgs to
-    the client-side **proxy**
-
-<!-- end list -->
-
-  - **Proxy and the skeleton** are referred to as **stubs**\!\!\! BOARD
-
-**<span class="underline">3. Resource based Architectures</span>**
+### 3. Resource based Architectures
   - View a distributed system as a **set of resources** where machines,
-    <span class="underline">individually manged by components</span>.
+     individually manged by components .
     Resources may be added, deleted, modified, etc by (remote) apps
   - Characteristics of **RESTful** architecture:
       - Resources need an identifier→ is usually accessed through
-        <span class="underline">**URI (uniform resource
-        identifier**)</span>
+         **URI (uniform resource
+        identifier**)
       - All the services offer same interface. e.g. put, get, delete,
         post
       - Messages are fully self-described. E.g. when sending HTML, say
@@ -198,6 +184,7 @@ Server-side stub (**skeleton**)
           - Is prominent in web services and REST
   - Operations – put, get, delete, post → **CRUD operation\!\!** 보드
       - Create (PUT), Read (GET), Update (POST), Delete (DELETE)
+
 
 **E.g. Amazon’s Simple storage service (Amazon S3) –** RESTful in practice
   - **Objects** (=files) are placed into **buckets** (=directories)
@@ -212,19 +199,19 @@ Server-side stub (**skeleton**)
       - Specific object in that bucket called ObjectName
   - Simple as long as you know the URI→ in detail in further lecture
 
-**<span class="underline">4. Event based architecture</span>**
 
+
+### 4. Event based architecture
   - As processes join and leave, its important that dependencies btwn
     processes are as loose as possible → hence, architecture that has
-    <span class="underline">strong separation between **processing** and
-    **coordination**</span>
+     strong separation between **processing** and
+    **coordination**
       - So more of autonomously operating processes
   - Here we emphasize the **coordination**\!\! → it encompasses the
     communication and cooperation btwn processes and machines
   - Two design:
-
       - **Mailbox** coordination- 2 processors, to work and exchange
-        info – they use <span class="underline">shared mailbox</span>,
+        info – they use  shared mailbox ,
         and they communicate through this shared mailbox
           - Write and fetch to the mailbox
           - No real communication btwn the two
@@ -241,26 +228,28 @@ Server-side stub (**skeleton**)
   ![image](https://user-images.githubusercontent.com/33334078/74420823-f47f9a00-4e43-11ea-9025-3131fb58a5e7.png)
 
 1.  **Event based** architectural style – publish subscribe is key.
-    1.  **Event bus** – mechanism which the publishers and subscribers
+  - **Event bus** – mechanism which the publishers and subscribers
         are matched → what coordinates these events
 
 2.  **Shared data space** architectural style – there's a db which is
     persistent and liable
-    1.  The components will communicate entirely through **tuples**
-        which is saved in a saved db, and other one does a quick search
-        to see if the tuple exists any tuple that matches is returned.
-          - **Tuples**: a structured data records with number of fields
-    2.  Can be combined w event based – process subscribes to certain
-        tuples publish \&subscribe
+  - The components will communicate entirely through **tuples**
+      which is saved in a saved db, and other one does a quick search
+      to see if the tuple exists any tuple that matches is returned.
+      - **Tuples**: a structured data records with number of fields
+  -  Can be combined w event based – process subscribes to certain
+      tuples publish \&subscribe
 
-**System Architectures**
+
+## System Architectures
   - System architecture is the **instantiation** (placing soft.
     components on a real machines) of a software architecture. but how
     do I actually place them on hardware?????
   - There are 3 ways to organise this architecture: centralised,
     decentralised, hybrids
 
-**1. Centralised Organisations**
+
+### 1. Centralised Organisations
 
 **Basic Client Server Model**
   - One of the core organization of the system architecture
@@ -320,8 +309,8 @@ Server-side stub (**skeleton**)
   - Depends on archi – but for good design, it’ll be better to have 3 as
     everything is separate.
 
-**2. Decentralised**
 
+### 2. Decentralised
   - **Peer to Peer (P2P) architecture**
       - They communicate, and could join and leave, but the interaction
         is always theatre.
@@ -337,13 +326,13 @@ Server-side stub (**skeleton**)
           - Based on using semantic-free index.
       - Each data item is associated with a **key**, which is used as an
         **index**. Its common to use a **hash** **function**.
-        <span class="underline">Key (data item) = hash (data item’s
-        value)</span>
+         Key (data item) = hash (data item’s
+        value)
           - each node responsible for strong (key, value) pairs - thus
             implementing a **distributed hash table**
-      - Any node can be asked to <span class="underline">lookup a given
-        key</span>, which then comes down to efficiently *routing* that
-        <span class="underline">lookup request</span> to the node
+      - Any node can be asked to  lookup a given
+        key , which then comes down to efficiently *routing* that
+         lookup request  to the node
         responsible for storing the data associated with the given key .
 
       - ![Screenshot 2020-02-13 at 9 35 35 am](https://user-images.githubusercontent.com/33334078/74420968-30b2fa80-4e44-11ea-84b8-61d6418eafb2.png)
@@ -359,14 +348,14 @@ Server-side stub (**skeleton**)
         problem** by using the lookup table which helps you decide the
         next node.
 
-**3. Hybrid**
 
+### 3. Hybrid
   - Need to combine centralized and decentralized→ we experience on a
     daily basis
   - Ideally ud like to have and ISP (Internet Service Providers) server
     very close to where you live – due to bandwidth and latency issue.
     So what we do is combine, we will end up in
-    <span class="underline">number of edge servers</span> all around the
+     number of edge servers  all around the
     network. As a end user we connect to closest edge server that could
     serve me
       - Sometimes when the edge server doesn’t have the info I need, It
@@ -376,7 +365,8 @@ Server-side stub (**skeleton**)
   - Interesting problem – how many edge? How do we optimize the content
     itself? And how do you distribute the apps all over the edges?
 
-**Summary**
+
+## Summary
   - Reviewed various architectural styles and system architectures
   - Discussed how the client-server model generalises to the idea of
     multi-tier systems
