Fix image and add toc

--- a/_posts/2020-02-09-DS-4.md
+++ b/_posts/2020-02-09-DS-4.md
@@ -5,16 +5,19 @@ categories:
   - Distributed Systems
 date: 2020-02-09
 ---
+- [Layered Protocols](#layered-protocols)
+- [Middleware Protocols](#middleware-protocols)
+- [Types of Communications](#types-of-communications)
+- [Remote Procedure Call (RPC)](#remote-procedure-call-rpc)
+  - [RPC operation](#rpc-operation)
+  - [Interaction using Asynchronous RPC](#interaction-using-asynchronous-rpc)
+- [The Message Passing Interface (MPI)](#the-message-passing-interface-mpi)
+- [Summary](#summary)
 
 
-## **4. Message Oriented Communication**
 
-We looked at the architectural style, and today we are looking at the
-communication side of the things – all sorts of ways and mechanism to
-implement communication in dist sys
 
 **Goal**
-
   - HOW the communication takes place in DS - Interprocess communication
     is at the heart of all ds
   - It is important to examine the ways that processes on different
@@ -27,12 +30,11 @@ implement communication in dist sys
       - Remote Method Invocation
       - Message Oriented communication
 
-**Layered Protocols**
-
-  - ![page4image21783280](media/image14.png)
+## Layered Protocols
+  - ![Screenshot 2020-11-30 at 2 34 34 pm](https://user-images.githubusercontent.com/33334078/100572584-2ac9cf80-3319-11eb-8c38-7cc0b78775f7.png)
   - Due to the absence of shared memory, all communication in DS is
-    <span class="underline">based on sending and receiving low level
-    messages.</span>
+      based on sending and receiving low level
+    messages.   
   - There are number of rules that communicating processes must adhere
     to - **protocols** and structuring these protocols in the form of
     layers.
@@ -43,7 +45,7 @@ implement communication in dist sys
     btwn.
   - **OSI – Open System Interconnection** – we don’t use this model; we
     use simplified version with 5 layers
-      - In TCP/IP, 보드 scrapping out session & physical layers
+      - In TCP/IP, scrapping out session & physical layers
   - Importance of \!\!**Layer,** **interfaces** and **protocols**
 
 **Layered Protocols II**
@@ -55,9 +57,9 @@ implement communication in dist sys
   - Each layer will add a **header** to the front of the message and
     passes the resulting message. – including usage and
     source/destination addresses.
-      - Use of <span class="underline">overhead</span> – since it will
+      - Use of   overhead    – since it will
         use network resources. It’s a price to pay to add a header
-      - Some will add a <span class="underline">trailer</span> too –
+      - Some will add a   trailer    too –
         data link layer does.
   - End up with a message with 6 different headers. This is how the
     messages are gonna be converted into bits by sending it to the
@@ -68,8 +70,7 @@ implement communication in dist sys
     **the header** and examine it. → you obtain original
   - →v imp that the original msg is passed back\!\!\!
 
-**Middleware Protocols**
-
+## Middleware Protocols
   - Sits btwn the application and OS (in fact a transport layer).we
     need some form of layer that will provide us with a single coherent
     view
@@ -99,11 +100,10 @@ implement communication in dist sys
     TCP IP
   - We communicate one to one, and the LHS will have to communicate with
     RHS- it has to go through all this layer
-  - \!\!\! imp role is that <span class="underline">Network layer has to
-    ensure that this communication takes plac</span>e\!\!\!
+  - \!\!\! imp role is that Network layer has to
+    ensure that this communication takes plac   e\!\!\!
 
-**Types of Communications**
-
+## Types of Communications
   - ![2](https://user-images.githubusercontent.com/33334078/74690888-7ff88280-51d8-11ea-89fb-85efa8ed8323.png)
   - If we take client server model and we take an email system. how does
     it acc work in terms of client server? → core is the middleware
@@ -115,8 +115,8 @@ implement communication in dist sys
 <!-- end list -->
 
 1.  First need to **synchronize** – server and client.
-2.  Client sends the msg to the <span class="underline">mail delivery
-    system</span>
+2.  Client sends the msg to the   mail delivery
+    system   
     1.  Once the msg gets through the server, the message is stored in a
         storage facility.
 3.  Server connects to the mail delivery system and does the rq -
@@ -125,7 +125,7 @@ implement communication in dist sys
 
 <!-- end list -->
 
-  - <span class="underline">Constant communication</span> is always
+  -   Constant communication    is always
     there
 
 **Types of Communications II**
@@ -140,28 +140,26 @@ implement communication in dist sys
 
   - **Transient** and **persistent**
       - **Transient** – is only stored as long as the
-        <span class="underline">sending and receiving application are
-        both\!\! executing</span>.
+          sending and receiving application are
+        both\!\! executing   .
           - If the app on the other side is unavailable and when you
             can't communicate, it discards the message → does not ensure
             the message sending
           - All transport layer typically provides this.
       - **Persistent** – message that has been submitted for
-        transmission is <span class="underline">stored by the
+        transmission is   stored by the
         communication middleware as long as it takes to deliver the
-        message</span>
-
+        message   
           - So not necessary of sending app to continue application
-
-  - U can take transient and make it synchronous, or take persistent and
+  - You can take transient and make it synchronous, or take persistent and
     make it asynchronous \!
 
 **Types of Communications III**
 
   - In this case, **client/ server** is usually **transient synchronous
     communication** where the server and client
-    <span class="underline">has to be active at the time of
-    communication</span>
+      has to be active at the time of
+    communication   
       - Client sends a rq, Server waits for the incoming rq
       - Client issues rq and blocks until it receives reply
       - **drawback**
@@ -179,17 +177,15 @@ implement communication in dist sys
     second
 
 
-**Remote Procedure Call (RPC) –** in the real world, this communication
-is implemented as RPC
-
+## Remote Procedure Call (RPC)
+  - In the real world, this communication is implemented as RPC
   - Is at the heart of DS communication - \!\!\! very imp mechanism
   - Sending and receiving msgs – the process isn’t concealed.
-  - <span class="underline">To locally call a procedure that is
-    effectively implemented on a **remote** **machine**</span>
+  -   To locally call a procedure that is
+    effectively implemented on a **remote** **machine**   
       - Process on machine A calls a procedure on machine B, the calling
         process on A is suspended, and execution of the called.
         Procedure takes place on B.
-
   - Problem
       - Since the calling and called procedures run on diff machine,
         they execute in diff address space.
@@ -198,62 +194,59 @@ is implemented as RPC
       - Either or both machines can crash and failure can happen
 
 
-**RPC operation**
+### RPC operation
 
 ![3](https://user-images.githubusercontent.com/33334078/74691078-4a07ce00-51d9-11ea-9ede-5c072ca7e6b1.png)
 
-1.  Client is gonna <span class="underline">invoke a procedure</span> in
+1.  Client is gonna   invoke a procedure    in
     client stub.
     1.  With 2 parameter a and b – 2 diff data types
-2.  The client stub <span class="underline">builds a message</span>, and
+2.  The client stub   builds a message   , and
     calls local OS
-3.  Client OS takes the msg and <span class="underline">send it to the
-    remote (Server) OS</span>
-4.  Server OS <span class="underline">place</span> the msg to the
-    <span class="underline">server stub</span>
-5.  Server stub <span class="underline">unpacks parameters</span>, calls
+3.  Client OS takes the msg and   send it to the
+    remote (Server) OS   
+4.  Server OS   place    the msg to the
+      server stub   
+5.  Server stub   unpacks parameters   , calls
     server
 6.  Server understands what to do, do it and returns result to stub
-7.  Server stub <span class="underline">builds a message</span> and
+7.  Server stub   builds a message    and
     calls local OS
-8.  Server’s OS <span class="underline">sends the msg</span> to the
+8.  Server’s OS   sends the msg    to the
     client OS
-9.  Client OS gives msg to <span class="underline">client stub</span>
+9.  Client OS gives msg to   client stub   
 10. Client stub unpacks the msg, and return it to the client
 In a concept of architecture – we have object-based style marshalling.
 We put RPC in object based – we end up with RMI – **Remote** **Method
 Invocation,** they are really the same
 
 **RPC: Parameter Passing**
-
   - Although its very nice, when it comes to implementation, there are
     number of problems to deal with
-      - Need to understand <span class="underline">how marshalling and
-        unmarshalling works</span>
+      - Need to understand   how marshalling and
+        unmarshalling works   
       - Client and the server machines might have
-        <span class="underline">diff data representation</span> – 2 diff
+          diff data representation    – 2 diff
         architecture, data encoding could be diff. so how do we make
         them talk?
-      - <span class="underline">Wrapping paramete</span>**r** – do you
+      -   Wrapping paramete   **r** – do you
         start with last or first byte when marshalling and
         unmarshalling?
-      - <span class="underline">Same encoding</span> – server and client
+      -   Same encoding    – server and client
         has to agree on same encoding
-      - <span class="underline">Basic data values</span> (float, int)
+      -   Basic data values    (float, int)
         can be represented differently
-      - Marshalling and unmarshalling <span class="underline">complex
-        data value</span> (arrays, unions), how do you do it?
+      - Marshalling and unmarshalling   complex
+        data value    (arrays, unions), how do you do it?
   - In order for RPC to work, client and server need to correctly
     understand the msgs, and hopefully, will be able to transform them
     into **machine dependent representation**
 
-**  
-Data Marshalling Issues**
-
+**Data Marshalling Issues**
   - Diff encoding for charterers
-      - IBM uses <span class="underline">EBCDIC</span> - Extended Binary
+      - IBM uses   EBCDIC    - Extended Binary
         Coded Decimal Interchange Code,
-      - <span class="underline">Ascii</span> – American standard for
+      -   Ascii    – American standard for
         code information interchange
   - When it comes to implementing integers and floats, what kinda
     encoding?
@@ -266,13 +259,13 @@ Data Marshalling Issues**
   - They need to agree on the format\!\!
 
 
-**Interaction using Asynchronous RPC**
+### Interaction using Asynchronous RPC
   - ![4](https://user-images.githubusercontent.com/33334078/74691102-6277e880-51d9-11ea-98fc-fdcd556d07dd.png)
   - Different from the traditional RPC, in asynchronous RPC, client can
     continue without waiting for an answer from the server\!\!
   - Calls request → waits for acceptance, and continue doing other thing
     → when results are available, server sends a
-    <span class="underline">callback to client</span>
+      callback to client   
   - But the problem is, reliability is not guaranteed and we dunno if
     its gonna be processed.
   - Client and server does not need to
@@ -290,7 +283,7 @@ Data Marshalling Issues**
 
   - We have 2 models -shared memory and private memory models → they
     communicate through msg passing
-  - <span class="underline">Supports transient communication.</span>
+  -   Supports transient communication.   
   - Parallel computers have interconnection networks. But historically,
     the HPC were shipped with proprietary communication libraries
       - Problematic coz the software might not be compatible with diff
@@ -302,7 +295,7 @@ Data Marshalling Issues**
           - Each group and process is assigned an identifier.
       - Makes direct use of underlying network
 
-**The Message Passing Interface (MPI)**
+## The Message Passing Interface (MPI)
 
   - Large number 150 primitives available
       - 6 ways of sending messages – MPI\_bsend, send, ssend, sendrecv,
@@ -310,13 +303,12 @@ Data Marshalling Issues**
   - V imp for HPC community to easily write highly efficient apps
 
 **Message Oriented Persistent Communication: Message-Queuing Model**
-
   - New way of thinking and designing MPI – queuing
   - Provides support for **Asynchronous persistent** – and middleware
     does this by implementing a queue, and neither sender nor receiver
     has to be active
-  - <span class="underline">Queues</span> correspond to
-    <span class="underline">buffers</span> – it goes to the queue, and
+  -   Queues    correspond to
+      buffers    – it goes to the queue, and
     you fetch the messages
       - Put – append
       - Get – get the msg from the queue
@@ -325,28 +317,23 @@ Data Marshalling Issues**
         hasn’t arrived in the queue, if it arrives notify me\!
 
   - ![5](https://user-images.githubusercontent.com/33334078/74691106-6572d900-51d9-11ea-9082-53a3f06eac39.png)
+  a)  Both sender and receiver is active  
+  b)  Sender is active but receiver is not active – msg can't be delivered  
+      - Append msg in the queue and get it once they are active    
 
-<!-- end list -->
-1)  Both sender and receiver is active
-2)  Sender is active but receiver is not active – msg can't be delivered
-    1.  append msg in the queue and get it once they are active
-3)  Send the message and went to do sth else, receiver is active –
-    receiver can read msg that was sent, but not necessary that the
-    sender is executing
-4)  Both sender and receiver are inactive
-They are <span class="underline">loosely coupled</span> – no need for
-them to be <span class="underline">synchronized as everything goes
-through a queue\!\!</span>
+  c)  Send the message and went to do sth else, receiver is active – receiver can read msg that was sent, but not necessary that the sender is executing  
+  d)  Both sender and receiver are inactive  
+- They are loosely coupled – no need for them to be synchronized as everything goes through a queue!!
+
 
 **General Architecture of a Message-Queuing System**
-
   - ![6](https://user-images.githubusercontent.com/33334078/74691107-660b6f80-51d9-11ea-8560-c3309f75b72f.png)
   - If we take this queue-level addressing and link it to the network-
     level addressing, its so similar
   - We communicate through queue, and client need to know how the
     destination queue is addressed. So we need to know the
-    <span class="underline">name of the queue</span> and the
-    <span class="underline">address of where it can be accessed</span>.
+      name of the queue    and the
+      address of where it can be accessed   .
     → **queue manager**
   - Each **name** is associated with **contact address** (host, pair)
   - U need **lookup** that makes the name-to-address be available for
@@ -356,7 +343,6 @@ through a queue\!\!</span>
       - I want to send a msg to this receiver, where is its queue → it
         then finds the address of the queue, and the msg will be routed
         to that queue
-
   - Is what DNS implements, in the sense that it passes the address when
     you give it a name and we have an address lookup database
   - ![7](https://user-images.githubusercontent.com/33334078/74691108-673c9c80-51d9-11ea-8d59-b30ecb3c3237.png)
@@ -365,11 +351,11 @@ through a queue\!\!</span>
     appropriate queue using **lookup**
   - Main mechanism is a queue where senders and receivers post messages
 
-**AMQP: Advanced Message Queuing Protocol**
 
+**AMQP: Advanced Message Queuing Protocol**
   - There's been a standard protocol - AMQP that is extensively used in
-    the real world <span class="underline">to ensure the safe
-    transportation of information btwn applications</span> btwn
+    the real world   to ensure the safe
+    transportation of information btwn applications    btwn
     organisations
       - In areas such as finance, transportation, smart grid, online
         gaming
@@ -381,36 +367,33 @@ through a queue\!\!</span>
       - Rabbit MQ
       - ActiveMQ
 
-**Example: OpenStack Compute - Management Stack Control Built on
-Queues**
-
+**Example: OpenStack Compute - Management Stack Control Built on Queues**
   - Example of how AMQP protocol works
-  - Openstack – <span class="underline">virtual infrastructure
-    manager</span> extensively used in cloud computing
+  - Openstack – virtual infrastructure
+    manager extensively used in cloud computing
       - Supports the interaction btwn virtual infrastructure manager
         such as Openstack
-      - Message queues are there to <span class="underline">provide
-        communication and manage data persistence</span> in all the
+      - Message queues are there to provide
+        communication and manage data persistence in all the
         components in Openstack
       - Openstack has a lot of components, and
-        <span class="underline">they have to interact</span>→ through a
+          they have to interact → through a
         queue\! Using **rabbitMQ**
           - Had a default queue of mySQL DB, and can attach 1 queue to 1
             database, and potentially have up to 1000 machines in the
             cloud, interacting with each other through this queue
           - 1 queue up to 1000 machine
-      - The <span class="underline">communication</span> through
-        component is through <span class="underline">routing</span>, it
+      - The communication through
+        component is through routing , it
         gets routed to the right queue, and every time component needs
-        sth, it <span class="underline">uses an API</span>, and this API
+        sth, it uses an API , and this API
         is some form of message that displays on the queue
       - Then you have server listening to this queue, putting out
         messages from the queue, and potentially responding to request
         through the queue
   - → example in the real world where the protocol is actively used
 
-**Summary**
-
+## Summary
   - We have discussed the rules that communication processes must adhere
     to
   - Looked at a number of widely used models for communication
