Add 30th's news about korean government's DaaS introduction

--- a/_posts/2020-11-01-News-Nov.md
+++ b/_posts/2020-11-01-News-Nov.md
@@ -13,7 +13,8 @@ date: 2020-11-01
 3. [Crypto crime slows in 2020, but DeFi hacks rise - CipherTrace report](#crypto-crime-slows-in-2020-but-defi-hacks-rise---ciphertrace-report)   
 4. [Daimler will shrink with shift to electric, autonomous cars](#daimler-will-shrink-with-shift-to-electric-autonomous-cars)   
 5. [Smart doorbells 'easy target for hackers' study finds](#smart-doorbells-easy-target-for-hackers-study-finds)  
-6. [EU plans to open data to sharing in bid to rival Asia and U.S.](#eu-plans-to-open-data-to-sharing-in-bid-to-rival-asia-and-us)  
+6. [EU plans to open data to sharing in bid to rival Asia and U.S.](#eu-plans-to-open-data-to-sharing-in-bid-to-rival-asia-and-us)   
+7. [클라우드 보안인증에 DaaS 추가](#클라우드-보안인증에-daa-s-추가)  
 
 
 
@@ -115,25 +116,18 @@ They will also regulate the selling of data to another company or using it to de
 - [Link to the article](https://www.reuters.com/article/us-eu-tech/eu-plans-to-open-data-to-sharing-in-bid-to-rival-asia-and-u-s-idUSKBN2851MH)
 
 
-## [November 1st, 2020]
+## [November 30th, 2020]
 
-##  
-- **Who:**  
-- **What:**  
-- **When:**  
-- **Why:**  
+##  클라우드 보안인증에 DaaS 추가
+- **Who:**  과학기술정보통신부와 한국인터넷진흥원(KISA)
+- **What:**  클라우드 보안인증제 대상 분야에 ‘서비스형 데스크톱(Desktop as a Service, DaaS)’를 추가하고 심사인증 적용에 나선다. DaaS는 업무에 필요한 PC 업무환경을 퍼블릭 클라우드 서비스로 빌려쓰는 것을 뜻한다.
+- **When:**  11월 26일, 2020년
+- **Why:**
+  - 이는 올해 2월 행정안전부의 ‘개방형 OS 도입전략 수립’ 계획에 따라 공공기관 내 인터넷망 PC를 편리하고 안전한 DaaS로 대체하기 위한 과정의 일환이다.
+  - 클라우드 보안인증은 현재 한국인터넷진흥원(KISA)에서 발급중이다. 국내 공공기관에 클라우드 서비스를 제공하기 위해서 민간 클라우드 사업자들은 클라우드 보안인증을 필수적으로 받아야 한다.
 - **How:**  
+  - 인증 범위에는 네트워크, 보안 시스템, 하이퍼바이저 등의 인프라 영역과 DaaS 구성 요소인 가상 PC OS, 인증·관리서버, 보안 SW가 포함된다. 총 14개 부문 110개 통제항목, 209개의 세부 점검 항목에 대한 점검이 이뤄지며, DaaS 평가 항목 중 상당 부분은 기존의 IaaS 보안 인증과 중복된다.
 - **So?:**  
-- [Link to the article]()
-
-
-## [November 1st, 2020]
-
-##  
-- **Who:**  
-- **What:**  
-- **When:**  
-- **Why:**  
-- **How:**  
-- **So?:**  
-- [Link to the article]()
+  - 최근 코로나19에 따른 원격근무(재택근무) 활성화에 따라 정부부처와 공공기관에서도 DaaS 수요가 크게 늘고 있기 때문에, 최근 클라우드 서비스 사업자들은 DaaS 시장에 적극적인 추세다 - KT·네이버·NHN이 모두 서비스형 데스크톱(DaaS)에 대한 클라우드 보안인증 신청을 준비 중인 것으로 확인됐다.
+  - 클라우드 보안인증을 받은 DaaS가 도입되면, 공무원들은 행정업무용(내부망) PC와 인터넷용(외부망) PC를 따로 쓸 필요 없이 정부의 보안요구사항이 충족된 DaaS 기반의 안전한 가상 PC를 업무에 활용할 수 있게 된다.
+- [Link to the article](http://www.bloter.net/archives/483461)
