Add permalink and 'Study' category

--- a/_posts/2020-02-01-DS-0TOC.md
+++ b/_posts/2020-02-01-DS-0TOC.md
@@ -1,8 +1,10 @@
 ---
 title: "Distributed System - Table of Contents"
 tags: [Distributed Systems]
+permalink: "/distributed-systems/"
 categories:
   - Distributed Systems
+  - Study
 date: 2020-02-01
 ---
 
