--- a/_posts/2020-02-01-ML-0TOC.md
+++ b/_posts/2020-02-01-ML-0TOC.md
@@ -1,8 +1,10 @@
 ---
 title: "Machine Learning - Table of Contents"
 tags: [Machine Learning]
+permalink: "/machine-learning/"
 categories:
   - Machine Learning
+  - Study
 date: 2020-02-01
 ---
 
