--- a/_posts/2020-02-01-RS-0TOC.md
+++ b/_posts/2020-02-01-RS-0TOC.md
@@ -1,8 +1,10 @@
 ---
 title: "Recommender Systems - Table of Contents"
 tags: [Recommender Systems]
+permalink: "/recommender-systems/"
 categories:
   - Recommender Systems
+  - Study
 date: 2020-02-01
 ---
 
