--- a/_posts/2020-02-01-SC-0TOC.md
+++ b/_posts/2020-02-01-SC-0TOC.md
@@ -1,8 +1,10 @@
 ---
 title: "Secure Computing - Table of Contents"
 tags: [Secure Computing]
+permalink: "/secure-computing/"
 categories:
   - Secure Computing
+  - Study
 date: 2020-02-01
 ---
 
